--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div>
 
 	<div class="container">
-		<div>
-			<input [(ngModel)]="newTask">
-			<button (click)="add()">Dodaj</button>
-		</div>
+		<app-add-task (emitTask)="add($event)"></app-add-task>
 	</div>
 
 	<br>
@@ -12,19 +9,7 @@
 	<div class="container">
 
 		<div>
-			<strong> Do zrobienia ({{taskList.length}}):</strong>
-			<ng-container *ngIf="taskList.length > 0; else noTask">
-				<ul>
-					<li *ngFor="let task of taskList">
-						{{task}}
-						<button (click)="remove(task)">Usuń</button>
-						<button (click)="done(task)">Zrobione</button>
-					</li>
-				</ul>
-			</ng-container>
-			<ng-template #noTask>
-				<p>Brak zadań do wykonania.</p>
-			</ng-template>
+			<app-todo [tasksList]="tasksList" (emitDone)="done($event)" (emitRemove) ="remove($event)"></app-todo>
 		</div>
 
 		<div>
