--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,16 +9,11 @@
 	<div class="container">
 
 		<div>
-			<app-todo [tasksList]="tasksList" (emitDone)="done($event)" (emitRemove) ="remove($event)"></app-todo>
+			<app-todo [tasksList]="tasksList" (emitDone)="done($event)" (emitRemove)="remove($event)"></app-todo>
 		</div>
 
 		<div>
-			<strong> Wykonane ({{taskDone.length}}):</strong>
-			<ul>
-				<li *ngFor="let task of taskDone">
-					{{task}}
-				</li>
-			</ul>
+			<app-done-task [taskDone]="taskDone"></app-done-task>
 		</div>
 
 	</div>
